--- a/style.css
+++ b/style.css
@@ -62,10 +62,24 @@ h2:hover {
     color: darkslategrey;
 }
 
-#selectors {
+div.chapter {
     width: 80%;
-    margin: auto;
+    margin: 10px auto;
     border: green solid;
     padding: 8px 16px;
     box-sizing: border-box;
+}
+
+img.half_width {
+    width: 50%;
+    float: left;
+    margin: 10px;
+}
+
+div.text_with_img {
+    overflow: auto;
+}
+
+div.text_with_img::after {
+    clear: both;
 }
