--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ ul.top_menu {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    overflow: visible;
     background-color: #333;
     position: fixed;
     top: 0;
@@ -23,7 +23,11 @@ ul.top_menu li {
     float: left;
 }
 
-ul.top_menu li a {
+ul.top_menu li:last-child {
+    float: right;
+}
+
+ul.top_menu li a.nav_ref {
     display: block;
     color: white;
     text-align: center;
@@ -32,8 +36,36 @@ ul.top_menu li a {
     height: 20px;
 }
 
-ul.top_menu li a:hover {
+ul.top_menu li a.nav_ref:hover {
     background-color: #4CAF50;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+}
+
+.dropdown-content a {
+    display: block;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 .first {
@@ -90,14 +122,6 @@ h2 + p {
 
 li.parent + li span {
     color: darkcyan;
-}
-
-a.cool_ref {
-    display: block;
-}
-
-a:visited {
-    color: olive;
 }
 
 h2:hover {
